data/all_generated_tests/raw_wast_tests/call_indirect_ImproperFunctionCallorReturnHandling_4461.wast
;; 10. **Test Description:** Create boundary tests where `call_indirect` accesses the last valid index of a function table to ensure boundary conditions are correctly handled, without off-by-one errors.    - **Constraint:** Verifies proper boundary condition handling for the table.    - **Improper Handling Relation:** Off-by-one errors can lead to incorrect function execution at the boundary, missing intended function, or crashes.

(assert_invalid
  (module
    (type (func))
    (table 1 funcref)
    (func $boundary-test
      (call_indirect (type 0) (i32.const 1)) ;; This access the last valid index
    )
  )
  "type mismatch"
)